# API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2c60b8e332c4_add_chats_table_and_chat_id_to_history.py  2ffd448748c1_add_user_history.py  44757ac98ed9_initial_migration.py  6edbb824d0da_add_users_activity_table.py  85620f92dbad_make_user_id_not_unique_for_user_.py  964d0e2ec9a1_add_files_table.py  9851267b810c_support_sources_in_history.py  b3e7f1a2c4d9_add_multi_org_support.py
app/: main.py
app/api/: __init__.py
app/api/v1/: routers.py
app/api/v1/endpoints/: __init__.py  auth.py  chats.py  files.py  index.py  organizations.py  rag.py  settings.py  statistic.py
app/core/: __init__.py  config.py  dependencies.py  s3.py  security.py  ws.py
app/db/: session.py
app/db/models/: __init__.py  chat.py  file.py  org_index.py  organization.py  review.py  user.py  user_history.py  user_settings.py  users_activity.py
app/db/schemas/: __init__.py  files.py  index.py  organizations.py  rag.py  tokens.py  user.py
ocr/: OCR_async.py  api_ocr.py
rag/: __init__.py  config.py  create_index.py  delete_file.py  get_files.py  get_indexes.py  main.py  upload_file.py
